[gd_scene load_steps=2 format=3 uid="uid://du5qxvptioodf"]

[ext_resource type="Script" path="res://Scipts/EndLevelScreen.gd" id="1_sabt8"]

[node name="EndLevelScreen" type="Node2D"]
script = ExtResource("1_sabt8")

[node name="NextLevelButton" type="Button" parent="."]
offset_left = 419.0
offset_top = 152.0
offset_right = 645.0
offset_bottom = 218.0
text = "Next Level"

[node name="EndGameButton" type="Button" parent="."]
offset_left = 487.0
offset_top = 326.0
offset_right = 574.0
offset_bottom = 357.0
text = "Exit Game
"

[node name="ResetLevel" type="Button" parent="."]
offset_left = 500.0
offset_top = 249.0
offset_right = 565.0
offset_bottom = 280.0
text = "Restart
"

[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="EndGameButton" to="." method="_on_end_game_button_pressed"]
[connection signal="pressed" from="ResetLevel" to="." method="_on_reset_level_pressed"]
